# nvim-theme-color-dist

./: .gitignore  .gitmodules  CLAUDE.md  README.md
data/processed/: abstractBoxes_theme.lua  blueMosqueCeil_theme.lua  bull_theme.lua  camels_theme.lua  couple_theme.lua  forest_theme.lua  industry_theme.lua  man_theme.lua  savitsky_registry.lua  themes.md  witch_theme.lua
data/processed/savitsky/palettes/: abstractBoxes.lua  bull.lua  couple.lua  forest.lua  industry.lua  witch.lua
docs/: index.html  savitsky_themes.json  themes.json
src/: Dockerfile  Snakefile.py  Snakefile_const.py  Snakefile_mk_theme.py  Snakefile_theme.py  Snakefile_theme_docker.py  Snakefile_trends.py  assign.sh  assign_accents.py  assign_elements.py  assign_roles.py  assignments_polished.json  build_constraints.py  build_registry.py  compute_accent_separation.py  compute_accent_text_separation.py  compute_chroma_by_role.py  compute_deltaL_margins.py  compute_element_offsets.py  compute_text_contrast_bands.py  compute_ui_hue_coherence.py  debug.lua  display.py  extract_colors.py  fill_gaps.py  get_neovide_window_id.py  heat.qmd  heatmaps.qmd  hue_trend.py  mk_theme_json.py  nextflow.config  parse_cap.py  parse_colors.py  plot_chroma_by_role.py  plot_deltaL_margins.py  plot_hue_trend.py  pyproject.toml  role_cluster.sh  role_clusters.py  run.sh  (+8 more)
src/lua/savitsky/: init.lua  registry.lua
src/lua/savitsky/highlights/: default.lua
src/lua/savitsky/palettes/: abstractBoxes.lua  bull.lua  camels.lua  couple.lua  forest.lua  industry.lua  man.lua  witch.lua
