[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "colour-science>=0.4.4",
    "matplotlib>=3.9.4",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "scikit-image>=0.24.0",
    "scipy>=1.13.1",
    "snakemake>=7.32.4",
]
